--- a/android/app/src/main/res/layout/item_sponsor.xml
+++ b/android/app/src/main/res/layout/item_sponsor.xml
@@ -1,31 +1,35 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:background="?attr/selectableItemBackground"
-    android:padding="@dimen/sponsor_padding">
+    android:background="@color/white"
+    android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/sponsor_image"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/sponsor_image_margin"
-        android:contentDescription="@string/sponsor_image" />
+        android:background="?attr/selectableItemBackground"
+        android:orientation="vertical"
+        android:padding="@dimen/content_margin">
 
-    <TextView
-        android:id="@+id/sponsor_type"
-        android:layout_width="79dp"
-        android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:textSize="18sp"
-        android:textStyle="bold|italic" />
+        <ImageView
+            android:id="@+id/sponsor_image"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/sponsor_image_margin"
+            android:contentDescription="@string/sponsor_image" />
+
+        <TextView
+            android:id="@+id/sponsor_type"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:textSize="18sp"
+            android:textStyle="bold|italic" />
+    </LinearLayout>
 
     <View
-        android:id="@+id/separator"
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginTop="16dp"
-        android:background="@color/cardview_dark_background" />
-
+        android:layout_height="0.8dp"
+        android:background="?android:attr/listDivider" />
 </LinearLayout>
