--- a/android/app/src/main/res/layout/item_track.xml
+++ b/android/app/src/main/res/layout/item_track.xml
@@ -1,44 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/white"
     android:baselineAligned="false"
     android:clickable="true"
-    tools:showIn="@layout/list_tracks"
     android:focusable="true"
-    android:orientation="horizontal"
-    android:padding="@dimen/content_margin"
-    android:layout_marginBottom="1dp"
-    android:background="@color/white">
-
-    <ImageView
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:id="@+id/imageView"/>
+    android:orientation="vertical"
+    tools:showIn="@layout/list_tracks">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginRight="@dimen/content_margin"
-        android:layout_marginLeft="@dimen/content_margin"
-        android:orientation="vertical"
-        android:gravity="center">
+        android:layout_height="wrap_content"
+        android:background="?attr/selectableItemBackground"
+        android:orientation="horizontal"
+        android:padding="@dimen/content_margin">
 
-        <TextView
-            android:id="@+id/track_title"
-            android:textSize="18sp"
-            android:textColor="@color/primary_text"
-            android:layout_width="match_parent"
-            tools:text="Track Title"
-            android:layout_height="wrap_content"/>
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="50dp"
+            android:layout_height="50dp" />
 
-        <TextView
-            android:id="@+id/track_description"
-            android:textSize="14sp"
-            android:textColor="@color/secondary_text"
+        <LinearLayout
             android:layout_width="match_parent"
-            tools:text="Track description"
-            android:layout_height="wrap_content" />
+            android:layout_height="match_parent"
+            android:layout_marginLeft="@dimen/content_margin"
+            android:layout_marginRight="@dimen/content_margin"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/track_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/primary_text"
+                android:textSize="18sp"
+                tools:text="Track Title" />
+
+            <TextView
+                android:id="@+id/track_description"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/secondary_text"
+                android:textSize="14sp"
+                tools:text="Track description" />
+        </LinearLayout>
     </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.8dp"
+        android:background="?android:attr/listDivider" />
 </LinearLayout>
