--- a/android/app/src/main/res/layout/list_locations.xml
+++ b/android/app/src/main/res/layout/list_locations.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_margin="@dimen/item_align">
+    android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/txt_no_microlocations"
@@ -22,8 +21,6 @@
             android:id="@+id/list_locations"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:clipToPadding="false"
-            android:paddingBottom="30dp"
             android:scrollbars="vertical" />
     </android.support.v4.widget.SwipeRefreshLayout>
 </RelativeLayout>
