--- a/android/app/src/main/res/layout/item_sponsor_type.xml
+++ b/android/app/src/main/res/layout/item_sponsor_type.xml
@@ -8,8 +8,7 @@
         android:id="@+id/separator"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_marginTop="16dp"
-        android:background="@color/cardview_dark_background" />
+        android:layout_marginTop="16dp" />
 
     <TextView
         android:id="@+id/sponsor_category"
